--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-load-plugins": "^1.2.0",
     "gulp-mocha": "*",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "proxyquire": "~1.0.1",
     "should": "*",
