--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "proxyquire": "~1.0.1",
     "should": "*",
+    "source-map": "^0.5.6",
     "stream-assert": "^2.0.3"
   },
   "scripts": {
