--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "gulp": "*",
-    "gulp-clean-css": "^2.3.2",
+    "gulp-clean-css": "2.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-coverage": "~0.1.24",
     "gulp-each": "^0.2.0",
